vehicle end point
